# archivers-qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  arch_window.cpp  arch_window.h  arch_window.ui  compress_dialog.cpp  compress_dialog.h  compress_dialog.ui  main.cpp
archivers/: CMakeLists.txt  archivers.cpp  archivers.h
tests/: CMakeLists.txt
